# AOC25

./: .gitignore  CMakeLists.txt
src/: main.c
src/DataStructures/: Common.h  DynamicArray.c  DynamicArray.h  LinkedList.c  LinkedList.h  Stack.c  Stack.h  Structures.c  Structures.h
src/Days/: Day1.c  Day1.h  Day2.c  Day2.h  Day3.c  Day3.h  Day4.c  Day4.h  Day5.c  Day5.h  Days.h
